change name entity
